# nepse-signaling

./: .pre-commit-config.yaml  README.md  pyproject.toml  signals.csv  signals.xlsx
.github/workflows/: main.yml  schedule.yml
data/: BANKING.csv  DEVBANK.csv  FINANCE.csv  HOTELS.csv  HYDROPOWER.csv  INVESTMENT.csv  LIFEINSU.csv  MANUFACTURE.csv  MICROFINANCE.csv  NONLIFEINSU.csv  OTHERS.csv  TRADING.csv
data/2025-02-25T14:42:20.488851/: overall.csv
data/2025-02-27T02:09:20.624147/: overall.csv
data/2025-03-01T02:15:35.506582/: overall.csv
data/2025-03-02T02:13:57.755357/: overall.csv
data/2025-03-02T10:43:05.139715/: overall.csv
data/2025-03-03T10:46:21.330812/: overall.csv
data/2025-03-05T02:10:51.976518/: overall.csv
data/2025-03-05T10:45:58.834163/: overall.csv
data/2025-03-06T10:46:42.839372/: overall.csv
data/2025-03-08T10:40:24.016234/: overall.csv
data/2025-03-09T09:34:14.291398/: overall.csv
data/2025-03-10T09:33:24.431679/: overall.csv
data/2025-03-11T09:38:35.418097/: overall.csv
data/2025-03-12T09:38:55.713277/: overall.csv
data/2025-03-15T09:33:38.589190/: overall.csv
data/2025-03-16T09:33:42.995837/: overall.csv
data/2025-03-17T09:39:41.440159/: overall.csv
data/2025-03-18T09:39:24.063500/: overall.csv
data/2025-03-19T09:42:26.736282/: overall.csv
data/2025-03-20T09:39:13.897902/: overall.csv
data/2025-03-21T09:38:16.608365/: overall.csv
data/2025-03-23T09:34:05.954226/: overall.csv
src/: main.py  main_new.py  main_signaling.py  nepse_official.py  nepse_signal_rules.py  new.py
(+88 files in other folders)
