[project]
name = "nepse-signaling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.2.0",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "textblob>=0.19.0",
    "types-openpyxl>=3.1.5.20241225",
    "types-psutil>=6.1.0.20241221",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20241016",
    "xlsxwriter>=3.2.2",
]
